test/files/pos/t7364b/BadList_1.java
public class BadList_1 extends java.util.ArrayList {
	public java.util.ArrayList foo() { return null; }
}
